Added ops, English default complete