@@ -4,25 +4,24 @@ import com.google.common.base.Objects;
 
 import java.util.Arrays;
 
+import static beastie.toys.l8n.App.localeUtil;
+
 public class Subject {
     private final String article;
     private String noun;
-    public static final String DEFAULT_ARTICLE = "a";
-    public static final String INDEFINITE_ARTICLE = "the";
-    public static final String VOWEL_ARTICLE = "an";
-    public static final String POINTER = "it";
-    public static final String[] ARTICLES = new String[]{VOWEL_ARTICLE, INDEFINITE_ARTICLE, DEFAULT_ARTICLE};
+    public static final String DEFAULT_ARTICLE = localeUtil.get("lang.article.default");
+    public static final String[] ARTICLES = localeUtil.getArr("lang.article.all");
 
     private Subject(String s) {
         var arg = Arrays.stream(s.split(" ")).toList();
         this.noun = s;
 
         if (arg.size() > 1) {
-            if (DEFAULT_ARTICLE.equals(arg.get(0))) {
+            if (DEFAULT_ARTICLE.equals(arg.getFirst())) {
                 this.article = DEFAULT_ARTICLE;
                 this.noun = String.join(" ", arg.stream().skip(1).toList());
                 return;
-            } else if (Arrays.asList(ARTICLES).contains(arg.get(0))) {
+            } else if (Arrays.asList(ARTICLES).contains(arg.getFirst())) {
                 this.noun = String.join(" ", arg.stream().skip(1).toList());
             }
         }
@@ -33,22 +32,12 @@ public class Subject {
         return new Subject(s);
     }
 
-    public Subject(String article, String noun) {
-        this.article = article;
-        this.noun = noun;
-    }
-
-    public String getArticle() {
-        return article;
-    }
-
     public String getNoun() {
         return noun;
     }
 
     private String resolveArticle(String s) {
-        var qualifyingNoun =  Arrays.stream(s.split(" ")).reduce((a, b) -> b).orElse("");
-        return "aeioux".indexOf(qualifyingNoun.charAt(0)) < 0 ? DEFAULT_ARTICLE : VOWEL_ARTICLE;
+        return localeUtil.getOp("lang.fun.article.identifier").apply(s);
     }
 
     public String toString() {
